# webproject_backend

./: .gitignore  .pylintrc  Dockerfile  pyproject.toml  readme.md  start.py
.github/: CODEOWNERS
.github/workflows/: deploy.yml  pr-confirm.yml
app/: alembic.ini  db.py  env.py  main.py
app/mig/: env.py  script.py.mako
app/mig/versions/: 1b608ff10f57_aa.py  43674e62be5a_add_user.py  63f34a3d885c_aa.py  d9061d68cd4d_aa.py  dc5dd4a497ee_aa.py  fae1bae844e1_aa.py
app/models/: __init__.py  board.py  user.py
app/routes/: __init__.py  board.py  user.py
app/schemas/: __init__.py  board.py  response.py  user.py
app/utils/: auth_util.py  db_util.py  debug_util.py  fcm_util.py  fs_util.py  s3_util.py  schema_util.py
app/utils/ses/: email_build_template.html  email_template.html  ses_util.py
hooks/: pre-commit
